--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 </head>
 
 <body>
-  <h1>Word500 Clone</h1>
+  <h1>Mot500</h1>
   <div class="board" id="board"></div>
   <div id="result"></div>
 
